--- a/ExcellentLearningApp/Features/Shared/_Layout.cshtml
+++ b/ExcellentLearningApp/Features/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="#">Nauka</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Menażer treści</a>
+                        <a class="nav-link" asp-action="Index" asp-controller="IssueManager">Menażer treści</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kontakt</a>
