--- a/ExcellentLearningApp/Features/IssueManager/Views/Index/Index.cshtml
+++ b/ExcellentLearningApp/Features/IssueManager/Views/Index/Index.cshtml
@@ -1,9 +1,12 @@
 ﻿@model ExcellentLearningApp.Features.IssueManager.Models.IssueManagerModel
 @using ExcellentLearningApp.Infrastructure.Extensions
+@using ExcellentLearningApp.Infrastructure.Helpers
 
 @{
     ViewData["Title"] = "Issue Manager";
 }
+
+@BootstrapHelper.Table(Model.Issues, new DropdownModel {Name = "Akcje" })
 
 <table class="table table-striped">
     <thead>
@@ -22,18 +25,44 @@
                 {
                     <td>@prop.GetValue(issue)</td>
                 }
-            <td>
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle p-1 m-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Akcje
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Edytuj</a>
-                        <a class="dropdown-item" href="#">Usuń</a>
+                <td class="d-flex flex-row-reverse">
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle px-3 py-1 mx-2 my-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Akcje
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Edytuj</a>
+                            <a class="dropdown-item" href="#">Usuń</a>
+                        </div>
                     </div>
-                </div>
-            </td>
+                </td>
             </tr>
         }
     </tbody>
 </table>
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
